Fix large Table of Contents overflowing with image

--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -786,6 +786,8 @@ code {
   padding: 0.8em 1.2em 0.4em 1.2em;
   margin: 0 0 1em 1em;
   overflow-y: clip;
+  position: relative;
+  z-index: 1;
 }
 .table-of-contents a {
   text-decoration: none;
